<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TipCalculator" >
    
    <ImageView
        android:id="@+id/ivBackgroundImage"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background_image_desc"
        android:layout_alignParentTop="true" android:src="@drawable/background_image"/>
    
    <LinearLayout 
        android:id="@+id/llBaseAmount"
        android:layout_width="wrap_content"
        android:layout_marginTop="50dip"
        android:layout_marginLeft="10dip"
        android:layout_height="wrap_content" 
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/tvBillAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/base_amount_string"
            android:typeface="sans"
            android:shadowColor="#7A7A7A"
            android:shadowRadius="1.5"
            android:shadowDx="1"
            android:shadowDy="1"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/etBillAmount"
            android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:text="@string/base_amount" />

    </LinearLayout>

    <LinearLayout 
        android:id="@+id/llTipPercentLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:layout_marginLeft="10dip"
        android:layout_below="@+id/llBaseAmount" 
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/tvTipPercentSelection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/rb_tip_selection"
            android:typeface="sans"
            android:shadowColor="#7A7A7A"
            android:shadowRadius="1.5"
            android:shadowDx="1"
            android:shadowDy="1"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <RelativeLayout
            android:id="@+id/rlTipPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioGroup
                android:id="@+id/rbTipPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rbTenPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:state_checked="true"
                    android:text="@string/ten_percent"
                    android:textSize="15sp"
                    android:visibility="visible" />

                <RadioButton
                    android:id="@+id/rbFifteenPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fifteen_percent"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/rbTwentyPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/twenty_percent"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/rbCustomPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other_percent"
                    android:textSize="15sp" />

            </RadioGroup>
            
            <AutoCompleteTextView 
                android:id="@+id/autoCustomPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:minWidth="50dip"
                android:singleLine="true"
                android:width="100dip" 
                android:completionThreshold="1"
                android:layout_toRightOf="@+id/rbTipPercent" />
    
            <EditText
                android:id="@+id/etCustomPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:minWidth="30dp"
                android:singleLine="true"
                android:width="50dp" 
                android:layout_toRightOf="@+id/rbTipPercent" />            
        </RelativeLayout>
    </LinearLayout>
        
    <LinearLayout
        android:id="@+id/llNumPeopleLayout"
        android:layout_width="wrap_content"
        android:layout_marginTop="30dip"
        android:layout_marginLeft="10dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llTipPercentLayout" 
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvNumPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_people_string"
            android:typeface="sans"
            android:shadowColor="#7A7A7A"
            android:shadowRadius="1.5"
            android:shadowDx="1"
            android:shadowDy="1"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
<!--         <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:orientation="horizontal">
            
            <Button
                android:id="@+id/buttonMinus"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-" />

            <Button
                android:id="@+id/buttonPlus"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+" />
            

        </LinearLayout>
 -->
        <EditText
            android:id="@+id/etNumPeople"
            android:layout_width="50dip"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true"
            android:ems="10" >
        </EditText>   
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/llTipResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="30dip"
        android:layout_below="@+id/llNumPeopleLayout" 
        android:orientation="vertical" >
        
        <LinearLayout 
            android:id="@+id/llTotalBillAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            
            <TextView
                android:id="@+id/tvTotalBillAmountString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_bill_amount_string"
                android:typeface="sans"
                android:shadowColor="#7A7A7A"
                android:shadowRadius="1.5"
                android:shadowDx="1"
                android:shadowDy="1"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <TextView
                android:id="@+id/tvTotalBillAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/base_tip"
                android:layout_marginLeft="10dip"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
        
        <LinearLayout 
            android:id="@+id/llTotalTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            
            <TextView
                android:id="@+id/tvTipString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_string"
                android:typeface="sans"
                android:shadowColor="#7A7A7A"
                android:shadowRadius="1.5"
                android:shadowDx="1"
                android:shadowDy="1"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <TextView
                android:id="@+id/tvTipAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/base_tip"
                android:layout_marginLeft="10dip"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
        </LinearLayout>
        
        <LinearLayout 
            android:id="@+id/llTipPerPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:orientation="horizontal" >
            
                <TextView
                    android:id="@+id/tvTipPerPerson"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tip_string_per_person"
                    android:typeface="sans"
                    android:shadowColor="#7A7A7A"
                    android:shadowRadius="1.5"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/tvTipAmountPerPerson"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/base_tip"
                    android:layout_marginLeft="10dip"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
        
    </LinearLayout>

    <LinearLayout 
        android:id="@+id/llUserTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/llTipResult"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/tvBaseAmountHelper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>
</RelativeLayout>